--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -252,17 +252,58 @@
                                 android:textSize="12sp"
                                 app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
-
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/banksRecyclerView"
+                            <io.supercharge.shimmerlayout.ShimmerLayout
+                                android:id="@+id/shimmerRecyclerView"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
                                 app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                                 app:layout_constraintTop_toBottomOf="@+id/textView24"
                                 app:layout_goneMarginBottom="8dp"
+                                app:shimmer_animation_duration="1200"
+                                app:shimmer_angle="0"
+                                app:shimmer_color="#EFECEC">
+<!--                                <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                                    android:id="@+id/skeletonRecyclerViewLinearLayout"-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="match_parent"-->
+<!--                                    android:orientation="vertical">-->
+<!--                                    <androidx.cardview.widget.CardView-->
+<!--                                        android:layout_width="200dp"-->
+<!--                                        android:layout_height="50dp"-->
+<!--                                        android:background="@drawable/skeleton_view_item"-->
+<!--                                        android:layout_marginTop="32dp"-->
+<!--                                        android:elevation="0dp"/>-->
+<!--                                    <androidx.cardview.widget.CardView-->
+<!--                                        android:layout_width="200dp"-->
+<!--                                        android:layout_height="50dp"-->
+<!--                                        android:layout_marginTop="32dp"-->
+<!--                                        android:elevation="0dp"-->
+<!--                                        android:background="@android:color/transparent"/>-->
+<!--                                    <androidx.cardview.widget.CardView-->
+<!--                                        android:layout_width="200dp"-->
+<!--                                        android:layout_height="50dp"-->
+<!--                                        android:background="@android:color/transparent"-->
+<!--                                        android:layout_marginTop="32dp"-->
+<!--                                        android:elevation="0dp"-->
+<!--                                        />-->
+<!--                                    <androidx.cardview.widget.CardView-->
+<!--                                        android:layout_width="200dp"-->
+<!--                                        android:layout_height="50dp"-->
+<!--                                        android:background="@android:color/transparent"-->
+<!--                                        android:layout_marginTop="32dp"-->
+<!--                                        android:elevation="0dp"-->
+<!--                                        />-->
+
+<!--                                </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/banksRecyclerView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
                                 tools:itemCount="10"
                                 tools:listitem="@layout/netbanking_banks_item" />
+                            </io.supercharge.shimmerlayout.ShimmerLayout>
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
