--- a/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
@@ -38,7 +38,7 @@
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:gravity="center"
-                android:text="Open your paytm application and\nconfirm the payment before\nthe time expires"
+                android:text="Open your UPI application and\nconfirm the payment before\nthe time expires"
                 android:textColor="#2D2B32"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
