--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -501,7 +501,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginStart="6dp"
                                         android:fontFamily="@font/poppins"
-                                        android:text="Add new UPI ID"
+                                        android:text="Pay via UPI ID"
                                         android:textColor="#595E6A"
                                         android:textSize="16sp"
                                         app:layout_constraintBottom_toBottomOf="@+id/imageView15"
